--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
               <a href="#">Прайс-лист</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="#" class="active">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
