Fix html tags and classes in catalog.html and catalog-item.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,9 +7,9 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <div class="main-logo">
+        <a href="#" class="main-logo">
           <img src="img/main-logo.png" alt="Barbershop">
-        </div>
+        </a>
         <nav class="main-menu">
           <ul>
             <li>
@@ -83,28 +83,24 @@
 		          <a href="#">Купить</a>
 		        </div>
 					</div>
-					<div class="shop-item-card-consist">
-						<p>
-							<b>В набор входят:</b>
-							<ul>
-								<li>
-									Средство для умывания (50 мл)
-								</li>
-								<li>
-									Увлажняющий крем (50 мл)
-								</li>
-								<li>
-									Крем для бритья (50 мл)
-								</li>
-								<li>
-									Крем после бритья, шампунь (50 мл)
-								</li>
-								<li>
-									Удобная кожаная косметичка
-								</li>
-							</ul>
-						</p>
-					</div>
+					<p class="shop-item-card-consist">В набор входят:</p>
+					<ul>
+						<li>
+							Средство для умывания (50 мл)
+						</li>
+						<li>
+							Увлажняющий крем (50 мл)
+						</li>
+						<li>
+							Крем для бритья (50 мл)
+						</li>
+						<li>
+							Крем после бритья, шампунь (50 мл)
+						</li>
+						<li>
+							Удобная кожаная косметичка
+						</li>
+					</ul>
 				</div>
       </div>
     </main>
