Added style.css and content images

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Набор для путешествий «BAXTER OF CALIFORNIA»</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <a href="#" class="main-logo">
-          <img src="img/main-logo.png" alt="Barbershop">
+          <img src="img/main-logo.png" width="111" height="24" alt="Barbershop">
         </a>
         <nav class="main-menu">
           <ul>
@@ -56,14 +57,14 @@
 				<div class="shop-item-card-photo-gallery">
 				  <div class="shop-item-card-main-photo">
 					 <figure>
-					  	<img src="img/travel-kit.png" width="300" height="300" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+					  	<img src="img/travel-kit.jpg" width="486" height="524" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
 				  	</figure>
 				  </div>
 				  <div class="shop-item-card-other-photos">
 				  	<figure>
-					  <img src="img/travel-kit-1.png" width="100" height="100" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
-					  <img src="img/travel-kit-2.png" width="100" height="100" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
-					  <img src="img/travel-kit-3.png" width="100" height="100" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+					  <img src="img/travel-kit-1.jpg" width="140" height="149" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+					  <img src="img/travel-kit-2.jpg" width="140" height="149" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+					  <img src="img/travel-kit-3.jpg" width="140" height="149" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
 					 </figure>
 				  </div>
 				</div>
