--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
       <div class="container">
         <a href="#" class="main-logo">
-          <img src="img/main-logo.png" alt="Barbershop">
+          <img src="img/main-logo.png" width="111" height="24" alt="Barbershop">
         </a>
         <nav class="main-menu">
           <ul>
@@ -85,7 +86,7 @@
         <div class="shop-items-list">
           <article class="shop-item">
             <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-1.png" width="150" height="100" alt="Набор для путешествий «BAXTER OF CALIFORNIA»"></a>
+              <a href="#"><img src="img/shop-item-1.jpg" width="220" height="165" alt="Набор для путешествий «BAXTER OF CALIFORNIA»"></a>
             </figure>
             <div class="shop-item-name">
               <h3><a href="#">Набор для путешествий «BAXTER OF CALIFORNIA»</a></h3>
@@ -101,7 +102,7 @@
           </article>
           <article class="shop-item">
             <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-2.png" width="150" height="100" alt="Увлажняющий кондиционер «BAXTER OF CALIFORNIA»"></a>
+              <a href="#"><img src="img/shop-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «BAXTER OF CALIFORNIA»"></a>
             </figure>
             <div class="shop-item-name">
               <h3><a href="#"><Увлажняющий кондиционер «BAXTER OF CALIFORNIA»</a></h3>
@@ -117,7 +118,7 @@
           </article>
           <article class="shop-item">
             <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-3.png" width="150" height="100" alt="Гель для волос «SUAVECITO»"></a>
+              <a href="#"><img src="img/shop-item-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»"></a>
             </figure>
             <div class="shop-item-name">
               <h3><a href="#">Гель для волос «SUAVECITO»</a></h3>
@@ -133,7 +134,7 @@
           </article>
           <article class="shop-item">
             <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-4.png" width="150" height="100" alt="Глина для укладки волос «AMERICAN CREW»"></a>
+              <a href="#"><img src="img/shop-item-4.jpg" width="220" height="165" alt="Глина для укладки волос «AMERICAN CREW»"></a>
             </figure>
             <div class="shop-item-name">
               <h3><a href="#">Глина для укладки волос «AMERICAN CREW»</a></h3>
@@ -149,7 +150,7 @@
           </article>
           <article class="shop-item">
             <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-5.png" width="150" height="100" alt="Гель для волос «AMERICAN CREW»"></a>
+              <a href="#"><img src="img/shop-item-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»"></a>
             </figure>
             <div class="shop-item-name">
               <h3><a href="#">Гель для волос «AMERICAN CREW»</a></h3>
@@ -165,7 +166,7 @@
           </article>
           <article class="shop-item">
             <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-6.png" width="150" height="100" alt="Набор для бритья «BAXTER OF CALIFORNIA»"></a>
+              <a href="#"><img src="img/shop-item-6.jpg" width="220" height="165" alt="Набор для бритья «BAXTER OF CALIFORNIA»"></a>
             </figure>
             <div class="shop-item-name">
               <h3><a href="#">Набор для бритья «BAXTER OF CALIFORNIA»</a></h3>
