Сетки: первое приближение

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
-        <a href="#" class="main-logo">
-          <img src="img/main-logo.png" width="111" height="24" alt="Barbershop">
-        </a>
+      <div class="container clearfix">
         <nav class="main-menu">
+          <a href="#" class="main-logo">
+            <img src="img/main-logo.png" width="111" height="24" alt="Barbershop">
+          </a>
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -35,78 +35,76 @@
         </div>
       </div>
     </header>
-    <main class="container">
-      <h1>Набор для путешествий «BAXTER OF CALIFORNIA»</h1>
-      <div class="breadcrumbs">
-        <ul>
-          <li>
-            <a href="#">Главная</a>
-          </li>
-          <li>
-            <a href="#">Магазин</a>
-          </li>
-          <li>
-            <a href="#">Средства для ухода</a>
-          </li>
-          <li>
-            <a href="#" class="active">Набор для путешествий «BAXTER OF CALIFORNIA»</a>
-          </li>
-        </ul>
-      </div>
-      <div class="shop-item-card">
-				<div class="shop-item-card-photo-gallery">
-				  <div class="shop-item-card-main-photo">
-					 <figure>
-					  	<img src="img/travel-kit.jpg" width="486" height="524" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
-				  	</figure>
-				  </div>
-				  <div class="shop-item-card-other-photos">
-				  	<figure>
-					  <img src="img/travel-kit-1.jpg" width="140" height="149" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
-					  <img src="img/travel-kit-2.jpg" width="140" height="149" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
-					  <img src="img/travel-kit-3.jpg" width="140" height="149" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
-					 </figure>
-				  </div>
-				</div>
-				<div class="shop-item-card-info">
-					<div class="shop-item-card-info-service">
-						<div class="shop-item-card-info-availability">Есть в наличии</div>
-						<div class="shop-item-card-info-sku">Артикул: dexter-ae</div>
-					</div>
-					<div class="shop-item-card-description">
-						<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-					</div>
-					<div class="shop-item-card-buy">
-		        <div class="shop-item-card-price">
-		          <p>2 900 руб.</p>
-		        </div>
-		        <div class="shop-item-card-cart">
-		          <a href="#">Купить</a>
-		        </div>
-					</div>
-					<p class="shop-item-card-consist">В набор входят:</p>
-					<ul>
-						<li>
-							Средство для умывания (50 мл)
-						</li>
-						<li>
-							Увлажняющий крем (50 мл)
-						</li>
-						<li>
-							Крем для бритья (50 мл)
-						</li>
-						<li>
-							Крем после бритья, шампунь (50 мл)
-						</li>
-						<li>
-							Удобная кожаная косметичка
-						</li>
-					</ul>
-				</div>
+    <main class="main-content">
+      <div class="container">
+        <h1>Набор для путешествий «BAXTER OF CALIFORNIA»</h1>
+        <div class="breadcrumbs">
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Средства для ухода</a>
+            </li>
+            <li>
+              <a href="#" class="active">Набор для путешествий «BAXTER OF CALIFORNIA»</a>
+            </li>
+          </ul>
+        </div>
+        <div class="shop-item-card clearfix">
+  				<div class="shop-item-card-photo-gallery">
+  				  <div class="shop-item-card-main-photo">
+  					  <img src="img/travel-kit.jpg" width="460" height="500" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+  				  </div>
+  				  <div class="shop-item-card-other-photos">
+  					  <img src="img/travel-kit-1.jpg" width="140" height="150" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+  					  <img src="img/travel-kit-2.jpg" width="140" height="150" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+  					  <img src="img/travel-kit-3.jpg" width="140" height="150" alt="Набор для путешествий «BAXTER OF CALIFORNIA»">
+  				  </div>
+  				</div>
+  				<div class="shop-item-card-info">
+  					<div class="shop-item-card-info-service">
+  						<div class="shop-item-card-info-availability">Есть в наличии</div>
+  						<div class="shop-item-card-info-sku">Артикул: dexter-ae</div>
+  					</div>
+  					<div class="shop-item-card-description">
+  						<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+  					</div>
+  					<div class="shop-item-card-buy">
+  		        <div class="shop-item-card-price">
+  		          <p>2 900 руб.</p>
+  		        </div>
+  		        <div class="shop-item-card-cart">
+  		          <a href="#">Купить</a>
+  		        </div>
+  					</div>
+  					<p class="shop-item-card-consist">В набор входят:</p>
+  					<ul>
+  						<li>
+  							Средство для умывания (50 мл)
+  						</li>
+  						<li>
+  							Увлажняющий крем (50 мл)
+  						</li>
+  						<li>
+  							Крем для бритья (50 мл)
+  						</li>
+  						<li>
+  							Крем после бритья, шампунь (50 мл)
+  						</li>
+  						<li>
+  							Удобная кожаная косметичка
+  						</li>
+  					</ul>
+  				</div>
+        </div>
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <div class="footer-address">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
