--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
-        <a href="#" class="main-logo">
-          <img src="img/main-logo.png" width="111" height="24" alt="Barbershop">
-        </a>
+      <div class="container clearfix">
         <nav class="main-menu">
+          <a href="#" class="main-logo">
+            <img src="img/main-logo.png" width="111" height="24" alt="Barbershop">
+          </a>
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -35,170 +35,160 @@
         </div>
       </div>
     </header>
-    <main class="container">
-      <h1>Средства для ухода</h1>
-      <div class="breadcrumbs">
-        <ul>
-          <li>
-            <a href="#">Главная</a>
-          </li>
-          <li>
-            <a href="#">Магазин</a>
-          </li>
-          <li>
-            <a href="#" class="active">Средства для ухода</a>
-          </li>
-        </ul>
-      </div>
-      <aside class="filter">
-        <form action="https://echo.htmlacademy.ru" method="post">
-          <fieldset class="filter-brands">
-            <legend>Производители:</legend>
-            <input type="checkbox" name="filter-brands-items" id="filter-brands-item-1" checked>
-              <label for="filter-brands-item-1">Baxter of California</label>
-            <input type="checkbox" name="filter-brands-items" id="filter-brands-item-2">
-              <label for="filter-brands-item-2">Mr natty</label>
-            <input type="checkbox" name="filter-brands-items" id="filter-brands-item-3" checked>
-              <label for="filter-brands-item-3">Suavecito</label>
-            <input type="checkbox" name="filter-brands-items" id="filter-brands-item-4">
-              <label for="filter-brands-item-4">Malin+Goetz</label>
-            <input type="checkbox" name="filter-brands-items" id="filter-brands-item-5">
-              <label for="filter-brands-item-5">Murray's</label>
-            <input type="checkbox" name="filter-brands-items" id="filter-brands-item-6" checked>
-              <label for="filter-brands-item-6">American crew</label>
-          </fieldset>
-          <fieldset class="filter-groups">
-            <legend>Группы товаров:</legend>
-            <label>
-              <input type="radio" name="filter-groups-item" value="v1"> Бритвенные принадлежности
-            </label>
-            <label>
-              <input type="radio" name="filter-groups-item" value="v2" checked> Средства для ухода
-            </label>
-            <label>
-              <input type="radio" name="filter-groups-item" value="v3"> Аксессуары
-            </label>
-          </fieldset>
-          <button type="submit">Показать</button>
-        </form>
-      </aside>
-      <div class="shop">
-        <div class="shop-items-list">
-          <article class="shop-item">
-            <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-1.jpg" width="220" height="165" alt="Набор для путешествий «BAXTER OF CALIFORNIA»"></a>
-            </figure>
-            <div class="shop-item-name">
-              <h3><a href="#">Набор для путешествий «BAXTER OF CALIFORNIA»</a></h3>
-            </div>
-            <div class="shop-item-buy">
-              <div class="shop-item-price">
-                <p>2 900 руб.</p>
-              </div>
-              <div class="shop-item-cart">
-                <a href="#">Купить</a>
-              </div>
-            </div>
-          </article>
-          <article class="shop-item">
-            <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «BAXTER OF CALIFORNIA»"></a>
-            </figure>
-            <div class="shop-item-name">
-              <h3><a href="#"><Увлажняющий кондиционер «BAXTER OF CALIFORNIA»</a></h3>
-            </div>
-            <div class="shop-item-buy">
-              <div class="shop-item-price">
-                <p>750 руб.</p>
-              </div>
-              <div class="shop-item-cart">
-                <a href="#">Купить</a>
-              </div>
-            </div>
-          </article>
-          <article class="shop-item">
-            <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»"></a>
-            </figure>
-            <div class="shop-item-name">
-              <h3><a href="#">Гель для волос «SUAVECITO»</a></h3>
-            </div>
-            <div class="shop-item-buy">
-              <div class="shop-item-price">
-                <p>290 руб.</p>
-              </div>
-              <div class="shop-item-cart">
-                <a href="#">Купить</a>
-              </div>
-            </div>
-          </article>
-          <article class="shop-item">
-            <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-4.jpg" width="220" height="165" alt="Глина для укладки волос «AMERICAN CREW»"></a>
-            </figure>
-            <div class="shop-item-name">
-              <h3><a href="#">Глина для укладки волос «AMERICAN CREW»</a></h3>
-            </div>
-            <div class="shop-item-buy">
-              <div class="shop-item-price">
-                <p>500 руб.</p>
-              </div>
-              <div class="shop-item-cart">
-                <a href="#">Купить</a>
-              </div>
-            </div>
-          </article>
-          <article class="shop-item">
-            <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»"></a>
-            </figure>
-            <div class="shop-item-name">
-              <h3><a href="#">Гель для волос «AMERICAN CREW»</a></h3>
-            </div>
-            <div class="shop-item-buy">
-              <div class="shop-item-price">
-                <p>500 руб.</p>
-              </div>
-              <div class="shop-item-cart">
-                <a href="#">Купить</a>
-              </div>
-            </div>
-          </article>
-          <article class="shop-item">
-            <figure class="shop-item-image">
-              <a href="#"><img src="img/shop-item-6.jpg" width="220" height="165" alt="Набор для бритья «BAXTER OF CALIFORNIA»"></a>
-            </figure>
-            <div class="shop-item-name">
-              <h3><a href="#">Набор для бритья «BAXTER OF CALIFORNIA»</a></h3>
-            </div>
-            <div class="shop-item-buy">
-              <div class="shop-item-price">
-                <p>750 руб.</p>
-              </div>
-              <div class="shop-item-cart">
-                <a href="#">Купить</a>
-              </div>
-            </div>
-          </article>
+    <main class="main-content">
+      <div class="container">
+        <h1>Средства для ухода</h1>
+        <div class="breadcrumbs">
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#" class="active">Средства для ухода</a>
+            </li>
+          </ul>
         </div>
-        <ul class="shop-items-pages-list">
-          <li>
-            <a href="#">1</a>
-          </li>
-          <li>
-            <a href="#" class="active">2</a>
-          </li>
-          <li>
-            <a href="#">3</a>
-          </li>
-          <li>
-            <a href="#">4</a>
-          </li>
-        </ul>
+        <div class="shop clearfix">
+          <aside class="filter">
+            <form action="https://echo.htmlacademy.ru" method="post">
+              <fieldset class="filter-brands">
+                <legend>Производители:</legend>
+                <input type="checkbox" name="filter-brands-items" id="filter-brands-item-1" checked>
+                  <label for="filter-brands-item-1">Baxter of California</label>
+                <input type="checkbox" name="filter-brands-items" id="filter-brands-item-2">
+                  <label for="filter-brands-item-2">Mr natty</label>
+                <input type="checkbox" name="filter-brands-items" id="filter-brands-item-3" checked>
+                  <label for="filter-brands-item-3">Suavecito</label>
+                <input type="checkbox" name="filter-brands-items" id="filter-brands-item-4">
+                  <label for="filter-brands-item-4">Malin+Goetz</label>
+                <input type="checkbox" name="filter-brands-items" id="filter-brands-item-5">
+                  <label for="filter-brands-item-5">Murray's</label>
+                <input type="checkbox" name="filter-brands-items" id="filter-brands-item-6" checked>
+                  <label for="filter-brands-item-6">American crew</label>
+              </fieldset>
+              <fieldset class="filter-groups">
+                <legend>Группы товаров:</legend>
+                <label>
+                  <input type="radio" name="filter-groups-item" value="v1"> Бритвенные принадлежности
+                </label>
+                <label>
+                  <input type="radio" name="filter-groups-item" value="v2" checked> Средства для ухода
+                </label>
+                <label>
+                  <input type="radio" name="filter-groups-item" value="v3"> Аксессуары
+                </label>
+              </fieldset>
+              <button type="submit">Показать</button>
+            </form>
+          </aside>
+          <div class="shop-items-list">
+            <article class="shop-item">
+              <a href="#"><img src="img/shop-item-1.jpg" width="220" height="165" alt="Набор для путешествий «BAXTER OF CALIFORNIA»"></a>
+              <div class="shop-item-name">
+                <h3><a href="#">Набор для путешествий «BAXTER OF CALIFORNIA»</a></h3>
+              </div>
+              <div class="shop-item-buy">
+                <div class="shop-item-price">
+                  <p>2 900 руб.</p>
+                </div>
+                <div class="shop-item-cart">
+                  <a href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="shop-item">
+              <a href="#"><img src="img/shop-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «BAXTER OF CALIFORNIA»"></a>
+              <div class="shop-item-name">
+                <h3><a href="#"><Увлажняющий кондиционер «BAXTER OF CALIFORNIA»</a></h3>
+              </div>
+              <div class="shop-item-buy">
+                <div class="shop-item-price">
+                  <p>750 руб.</p>
+                </div>
+                <div class="shop-item-cart">
+                  <a href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="shop-item">
+              <a href="#"><img src="img/shop-item-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»"></a>
+              <div class="shop-item-name">
+                <h3><a href="#">Гель для волос «SUAVECITO»</a></h3>
+              </div>
+              <div class="shop-item-buy">
+                <div class="shop-item-price">
+                  <p>290 руб.</p>
+                </div>
+                <div class="shop-item-cart">
+                  <a href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="shop-item">
+              <a href="#"><img src="img/shop-item-4.jpg" width="220" height="165" alt="Глина для укладки волос «AMERICAN CREW»"></a>
+              <div class="shop-item-name">
+                <h3><a href="#">Глина для укладки волос «AMERICAN CREW»</a></h3>
+              </div>
+              <div class="shop-item-buy">
+                <div class="shop-item-price">
+                  <p>500 руб.</p>
+                </div>
+                <div class="shop-item-cart">
+                  <a href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="shop-item">
+              <a href="#"><img src="img/shop-item-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»"></a>
+              <div class="shop-item-name">
+                <h3><a href="#">Гель для волос «AMERICAN CREW»</a></h3>
+              </div>
+              <div class="shop-item-buy">
+                <div class="shop-item-price">
+                  <p>500 руб.</p>
+                </div>
+                <div class="shop-item-cart">
+                  <a href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <article class="shop-item">
+              <a href="#"><img src="img/shop-item-6.jpg" width="220" height="165" alt="Набор для бритья «BAXTER OF CALIFORNIA»"></a>
+              <div class="shop-item-name">
+                <h3><a href="#">Набор для бритья «BAXTER OF CALIFORNIA»</a></h3>
+              </div>
+              <div class="shop-item-buy">
+                <div class="shop-item-price">
+                  <p>750 руб.</p>
+                </div>
+                <div class="shop-item-cart">
+                  <a href="#">Купить</a>
+                </div>
+              </div>
+            </article>
+            <ul class="shop-items-pages-list">
+              <li>
+                <a href="#">1</a>
+              </li>
+              <li>
+                <a href="#" class="active">2</a>
+              </li>
+              <li>
+                <a href="#">3</a>
+              </li>
+              <li>
+                <a href="#">4</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <div class="footer-address">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
