--- a/catalog.html
+++ b/catalog.html
@@ -98,8 +98,8 @@
                   <a href="#">Купить</a>
                 </div>
               </div>
-            </article>
-            <article class="shop-item">
+            </article><!--
+            --><article class="shop-item">
               <a href="#"><img src="img/shop-item-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «BAXTER OF CALIFORNIA»"></a>
               <div class="shop-item-name">
                 <h3><a href="#"><Увлажняющий кондиционер «BAXTER OF CALIFORNIA»</a></h3>
@@ -112,8 +112,8 @@
                   <a href="#">Купить</a>
                 </div>
               </div>
-            </article>
-            <article class="shop-item">
+            </article><!--
+            --><article class="shop-item">
               <a href="#"><img src="img/shop-item-3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»"></a>
               <div class="shop-item-name">
                 <h3><a href="#">Гель для волос «SUAVECITO»</a></h3>
@@ -126,8 +126,8 @@
                   <a href="#">Купить</a>
                 </div>
               </div>
-            </article>
-            <article class="shop-item">
+            </article><!--
+            --><article class="shop-item">
               <a href="#"><img src="img/shop-item-4.jpg" width="220" height="165" alt="Глина для укладки волос «AMERICAN CREW»"></a>
               <div class="shop-item-name">
                 <h3><a href="#">Глина для укладки волос «AMERICAN CREW»</a></h3>
@@ -140,8 +140,8 @@
                   <a href="#">Купить</a>
                 </div>
               </div>
-            </article>
-            <article class="shop-item">
+            </article><!--
+            --><article class="shop-item">
               <a href="#"><img src="img/shop-item-5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»"></a>
               <div class="shop-item-name">
                 <h3><a href="#">Гель для волос «AMERICAN CREW»</a></h3>
@@ -154,8 +154,8 @@
                   <a href="#">Купить</a>
                 </div>
               </div>
-            </article>
-            <article class="shop-item">
+            </article><!--
+            --><article class="shop-item">
               <a href="#"><img src="img/shop-item-6.jpg" width="220" height="165" alt="Набор для бритья «BAXTER OF CALIFORNIA»"></a>
               <div class="shop-item-name">
                 <h3><a href="#">Набор для бритья «BAXTER OF CALIFORNIA»</a></h3>
